@@ -1,3 +1,9 @@
+2011-04-29  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Unreviewed build fix. Fix wxMSW trunk builds by adding include.
+
+        * platform/graphics/wx/GraphicsContextWx.cpp:
+
 2011-04-29  Mike Reed  <reed@google.com>
 
         Reviewed by Ojan Vafai.
